tests/ui/foreign_switch_case.stderr
Error [E0023]: `switch` arms are written `condition -> { ... };`, not `case`
  --> tests/ui/foreign_switch_case.jet:3:9
    |
  3 |         case 1 -> { print("x"); };
    |         ^^^^
 Why: choosing one branch from many uses `switch` with `->` arms (S24)
 Fix: replace `case` with a condition and `->`, like `x == 1 -> { ... };`
